# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c  main.cpp
cmake/: README.md
docs/: CMakeLists.txt  mainpage.md
include/: README.md
include/utilities/: memory.hpp
src/: CMakeLists.txt  error.c  error.cpp  error.h  error.hpp
src/utilities/: memory.c  memory.cpp
tests/: CMakeLists.txt  main.cpp  utilities.cpp
